# SFML_TextBox

./: CMakeLists.txt  Caret.cpp  Caret.hpp  CaretStyle.cpp  CaretStyle.hpp  CharPos.cpp  CharPos.hpp  Highlight.cpp  Highlight.hpp  InputHandler.cpp  InputHandler.hpp  LICENSE  Pos.cpp  Pos.hpp  README.md  Reference.hpp  ScrollBar.cpp  ScrollBar.hpp  ScrollBarStyle.cpp  ScrollBarStyle.hpp  TextBox.cpp  TextBox.hpp  TextStyle.hpp
demo/: main.cpp
demos/: CMakeLists.txt  main.cpp
